force-app/main/default/objects/AIAgentProgressEvent__e/AIAgentProgressEvent__e.object-meta.xml
<CustomObject>
    <description>Published by AIAgentTurnTrace as AIAgentManager starts each phase of a turn (a data source read, a provider callout), so the chat LWC's "Working on it" card can show live progress. Published Immediately, not after commit - the enclosing AiMessageProcessingQueueable transaction is still running mid-callout when these are meant to arrive, so there is no "commit" to wait for. Best-effort only: a dropped or delayed event never affects the turn itself, only what the working indicator shows meanwhile.</description>
    <label>AI Agent Progress Event</label>
    <pluralLabel>AI Agent Progress Events</pluralLabel>
</CustomObject>