force-app/main/default/objects/AIAgentProgressEvent__e/fields/StepLabel__c.field-meta.xml
<CustomField>
    <fullName>StepLabel__c</fullName>
    <description>The ready-to-display label for the phase that just started (e.g. &quot;Reading Contact Roles&quot;, &quot;Provider callout&quot;) - the chat LWC shows it verbatim, with no further formatting.</description>
    <label>Step Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>