force-app/main/default/objects/AIAgentProgressEvent__e/fields/UserMessageId__c.field-meta.xml
<CustomField>
    <fullName>UserMessageId__c</fullName>
    <description>The user&apos;s AIConversationMessage__c this turn is answering - subscribers match this against the message they&apos;re waiting on, since a conversation can only be waiting on one turn at a time.</description>
    <label>User Message Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>